# biocore

./: biocore.cabal
src/Bio/: Core.hs
src/Bio/Core/: Sequence.hs  Strand.hs
src/Bio/Core/Sequence/: Util.hs
