Name:                biocore
Version:             0.3.2
License:             LGPL-2.1
License-File:        COPYING
Cabal-Version:       >= 1.6
Author:              Ketil Malde
Maintainer:          ketil@malde.org

Category:            Bioinformatics
Synopsis:            A bioinformatics library
Description:         A set of core definitions and data structures
                     commonly used in bioinformatics.  The intention is that bioinformatics
                     libraries will use this as a common ground to avoid needless incompatibilities
                     and duplicated work.
Homepage:            http://malde.org/~ketil/biohaskell/
Tested-With:         GHC==7.6.2
Build-Type:          Simple
-- Data-Files:

Source-repository head
  Type:     darcs
  Location: http://malde.org/~ketil/biohaskell/biocore/

Library
  Build-Depends:     base >= 3 && < 5, bytestring
  Exposed-Modules:   Bio.Core, Bio.Core.Sequence, Bio.Core.Strand, Bio.Core.Sequence.Util
  Ghc-Options:       -Wall
  Hs-Source-Dirs:    src
